--- a/Dokumentation/Morphologie.tex
+++ b/Dokumentation/Morphologie.tex
@@ -9,7 +9,7 @@
     %
     % Inhlatsverzeichnis umbenennen und anschliessend einen Seitenumbruch
     % 
-    \input{Morphologie/Aenderungen}  
+    %\input{Morphologie/Aenderungen}  
     \renewcommand{\contentsname}{Inhalt}
     \tableofcontents
     \newpage
