Diverse Ergänzungen gemacht

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -2,7 +2,7 @@
 	Als Gesamtübersicht und als Eruierungshilfe der einzelnen Teilprobleme haben wir zu Beginn der Lösungsfindung eine Skizze entworfen. Diese beinhaltet alle nötigen Elemente des Produkts und stellt diese in Relation zueinander dar. 
 	
 	\begin{figure}[h!]
-		\includegraphics[width=0.9\textwidth]{Morphologie/Bilder/Blockschaltbild.jpg}
+		\includegraphics[width=1.1\textwidth]{Morphologie/Bilder/Blockschaltbild}
 		\centering
 		\caption{Funktionsskizze zur Aufgabenstellung}
 		\label{abb:Blockschaltbild} 
