--- a/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
+++ b/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
@@ -29,4 +29,8 @@
 		\subsection{Weg des Balles}
 		\label{apx:WegDesBalles}
 		\includegraphics[page=1,scale=0.82,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Weg_des_Balles.pdf}
+		\newpage
+		\subsection{Bewertung Grobkonzepte}
+		\label{apx:BewertungGrobkonzepte}
+		\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 24.5mm]{Morphologie/Bilder/Beurteilung_Grobkonzepte.pdf}
 \end{landscape} 
