--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -2,6 +2,8 @@
 	\section{Grobkonzept}	
 		\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 26mm]{Morphologie/Bilder/Grobkonzept.pdf}
 \end{landscape} 
+\textit{Die detaillierte Bewertung aller Varianten sind dem Anhang \ref{apx:BewertungGrobkonzepte} zu entnehmen.}\\
+\\
 Es wurden vier Varianten (orange, grün, rot, blau) gewählt. 
 \begin{itemize}
 	\item Blaue Variante\\
@@ -21,4 +23,3 @@ Es wurden vier Varianten (orange, grün, rot, blau) gewählt.
 
 \subsection{Entscheidung}
 Die orange Variante bietet als gesamtes Konzept die erfolgversprechendste Lösung, bezüglich der vordefinierten Ziele der Team-Charta. Den Ball von der Startposition aus gewinkelt durch die Luft zu werfen erfordert keine zusätzlichen Bauteile um das Produkt am Boden zu verschieben. Dies minimiert einerseits den Aufwand und verringert die Fehleranfälligkeit erheblich. Die Bälle in der Ausgangslage in einem Magazin zu führen, hat den Vorteil, dass eine allfällige stückweise Ausgabe der Bälle mit wenig Aufwand hinzugefügt werden kann. Ein Smartphone mit integrierter Kamera löst die zwei Teilprobleme der Korberkennung und Rechenkapazität mit einem Gerät. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist. Die Ausgabe des Startsignals und Endsignals mit einem Notebook und die Übermittlung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
-
