--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -1,8 +1,9 @@
 \begin{landscape}
 	\section{Grobkonzept}	
-		\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 26mm]{Morphologie/Bilder/Grobkonzept.pdf}
+	\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 26mm]{Morphologie/Bilder/Grobkonzept.pdf}
 \end{landscape} 
-\textit{Die detaillierte Bewertung aller Varianten sind dem Anhang \ref{apx:BewertungGrobkonzepte} zu entnehmen.}\\
+
+\parindent0pt{\textit{Die detaillierte Bewertung aller Varianten sind dem Anhang \ref{apx:BewertungGrobkonzepte} zu entnehmen.}}\\
 \\
 Es wurden vier Varianten (orange, grün, rot, blau) gewählt. 
 \begin{itemize}
@@ -16,9 +17,7 @@ Es wurden vier Varianten (orange, grün, rot, blau) gewählt.
 	Die grüne Variante wurde um die Ausgangslage der Bälle in einem Drehkranz gewählt. Den Weg des Balles via seitliche Verschiebung wurde aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren, um den Weg kurz und einfach zu halten. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast, um dem grossen Gewicht des Drehkranzes entgegenzuwirken. Die Ausgabe des Startsignals mit einem Smartphone und die Übertragung mit WLAN sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
 	
 	\item Orange Variante\\
-	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist. Die Ausgabe des Startsignals mit einem Notebook und die Übertragung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
-	
-	
+	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist. Die Ausgabe des Startsignals mit einem Notebook und die Übertragung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.	
 \end{itemize}
 
 \subsection{Entscheidung}
