Neuen Bild Grobkonzept hinzugefügt

--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -1,11 +1,16 @@
 \begin{landscape}
-	\section{Grobkonzept}	
-	\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 26mm]{Morphologie/Bilder/Grobkonzept.pdf}
+	\section{Grobkonzept}
+		\begin{figure}[h!]
+			\includegraphics[page=1,scale=0.75,clip,trim=17mm 37mm 21mm 19mm]{Morphologie/Bilder/Grobkonzept.pdf}
+			\centering
+			\caption{Grobkonzept} 
+			\label{abb:Grobkonzept}
+		\end{figure}	
 \end{landscape} 
 
 \parindent0pt{\textit{Die detaillierte Bewertung aller Varianten sind dem Anhang \ref{apx:BewertungGrobkonzepte} zu entnehmen.}}\\
 \\
-Es wurden vier Varianten (orange, grün, rot, blau) gewählt. 
+Es wurden vier Varianten (orange, grün, rot, blau), wie in Abbildung \ref{abb:Grobkonzept} ersichtlich, gewählt. 
 \begin{itemize}
 	\item Blaue Variante\\
 	Es wurden schlicht in jedem Teilproblem diejenige Lösung ausgewählt, welche die höchste Punktezahl in den Bewertungskriterien erreichte.
