--- a/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
+++ b/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
@@ -1,36 +1,36 @@
 \begin{landscape}
-	\section{Beurteilung der Teilprobleme}
+	\subsection{Beurteilung der Teilprobleme}
 	\label{apx:BeurteilungTeilprobleme}
 	
-		\subsection{Startgerät-Endgerät}
+		\subsubsection{Startgerät-Endgerät}
 		\label{apx:StartgeraetEndgeraet}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Startgeraet-Endgeraet.pdf}
 		\newpage
-		\subsection{Startbefehlübermittlung}
+		\subsubsection{Startbefehlübermittlung}
 		\label{apx:Startbefehluebermittlung}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Startbefehluebermittlung.pdf}
 		\newpage
-		\subsection{Rechenkapazität}
+		\subsubsection{Rechenkapazität}
 		\label{apx:Rechenkapazitaet}
 		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Rechenkapazitaet.pdf}
 		\newpage
-		\subsection{Sensorik}
+		\subsubsection{Sensorik}
 		\label{apx:Sensorik}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Sensorik.pdf}
 		\newpage
-		\subsection{Versorgung und Steuerung}
+		\subsubsection{Versorgung und Steuerung}
 		\label{apx:VersorgungSteuerungSensorik}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Versorgung_Steuerung.pdf}
 		\newpage
-		\subsection{Ausgangslage der Bälle}
+		\subsubsection{Ausgangslage der Bälle}
 		\label{apx:AusgangslageDerBaelle}
 		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Ausgangslage_Baelle.pdf}
 		\newpage
-		\subsection{Weg des Balles}
+		\subsubsection{Weg des Balles}
 		\label{apx:WegDesBalles}
 		\includegraphics[page=1,scale=0.82,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Weg_des_Balles.pdf}
 		\newpage
-		\subsection{Bewertung Grobkonzepte}
+		\subsubsection{Bewertung Grobkonzepte}
 		\label{apx:BewertungGrobkonzepte}
 		\includegraphics[page=1,scale=0.825,clip,trim=17mm 75mm 18mm 24.5mm]{Morphologie/Bilder/Beurteilung_Grobkonzepte.pdf}
 \end{landscape} 
