--- a/Dokumentation/Morphologie.tex
+++ b/Dokumentation/Morphologie.tex
@@ -19,8 +19,12 @@
     %  
     \input{Morphologie/Analyse}
     \input{Morphologie/Grobkonzept}
+    \newpage
+    \input{Morphologie/Feinkonzept}
     
-    %\input{Morphologie/kaesten}
+    \newpage
+    \listoffigures 
+    
     \appendix
     % Beginn des Anhangs
         \begin{appendix}
@@ -28,6 +32,7 @@
             \pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
             %\section{Anhang}
             %\newpage
+            \section{Anhang}
             \input{Morphologie/Anhang/Teilproblembeurteilung}
             \newpage
         \end{appendix}  
