--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -1,4 +1,4 @@
-\begin{landscape}
+﻿\begin{landscape}
 	\section{Grobkonzept}
 		\begin{figure}[h!]
 			\includegraphics[page=1,scale=0.75,clip,trim=17mm 37mm 21mm 19mm]{Morphologie/Bilder/Grobkonzept.pdf}
@@ -13,17 +13,17 @@
 Es wurden vier Varianten (orange, grün, rot, blau), wie in Abbildung \ref{abb:Grobkonzept} ersichtlich, gewählt. 
 \begin{itemize}
 	\item Blaue Variante\\
-	Es wurden schlicht in jedem Teilproblem diejenige Lösung ausgewählt, welche die höchste Punktezahl in den Bewertungskriterien erreichte.
+	Eine Auswahl aller Lösungen, welche die höchste Punktezahl durch die Bewertungskriterien erreichte.
 	
 	\item Rote Variante\\
-	Ausgangspunkt in dieser Variante ist die Auswahl, die Bälle in eine Kugel einzuschliessen. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Den Weg des Balles via seitliche Verschiebung wurde aufgrund der Unhandlichkeit der grossen Kugel gewählt, um den Weg kurz und einfach zu halten. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast, um dem grossen Gewicht der Kugel entgegenzuwirken. Die Ausgabe des Startsignals mit einem Notebook und die Übertragung mit WLAN sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
+	Ausgangspunkt in dieser Variante ist die Auswahl, die Bälle in eine Kugel einzuschliessen. Da ein Smartphone mit integrierter Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Den Weg des Balles via seitliche Verschiebung wurde aufgrund der Unhandlichkeit der grossen Kugel gewählt: der Weg soll kurz und einfach gehalten werden. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast, um dem grossen Gewicht der Kugel entgegenzuwirken. Weiter ist die Ausgabe des Startsignals mit einem Notebook, sowie die Übertragung mit WLAN leicht zu Realisieren, da diese Lösungen auf gut dokumentierten Technologien basieren.
 	
 	\item Grüne Variante\\
-	Die grüne Variante wurde um die Ausgangslage der Bälle in einem Drehkranz gewählt. Den Weg des Balles via seitliche Verschiebung wurde aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren, um den Weg kurz und einfach zu halten. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast, um dem grossen Gewicht des Drehkranzes entgegenzuwirken. Die Ausgabe des Startsignals mit einem Smartphone und die Übertragung mit WLAN sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
+	Für die grüne Variante wurde als Ausgangslage der Bälle die Führung in einem Drehkranz gewählt. Kongruent zur Variante Rot, wurde auch hier der Weg des Balles via seitliche Verschiebung aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren. Da ein Smartphone mit integrierter Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Für die Wahl des Akkus und der Startsignal-Übertragung per WLAN überzeugten dieselben Kriterien, welche bereits in der roten Variante genannt wurden.
 	
 	\item Orange Variante\\
-	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Da ein Smartphone mit integrierte Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist. Die Ausgabe des Startsignals mit einem Notebook und die Übertragung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.	
+	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist.
 \end{itemize}
 
 \subsection{Entscheidung}
-Die orange Variante bietet als gesamtes Konzept die erfolgversprechendste Lösung, bezüglich der vordefinierten Ziele der Team-Charta. Den Ball von der Startposition aus gewinkelt durch die Luft zu werfen erfordert keine zusätzlichen Bauteile um das Produkt am Boden zu verschieben. Dies minimiert einerseits den Aufwand und verringert die Fehleranfälligkeit erheblich. Die Bälle in der Ausgangslage in einem Magazin zu führen, hat den Vorteil, dass eine allfällige stückweise Ausgabe der Bälle mit wenig Aufwand hinzugefügt werden kann. Ein Smartphone mit integrierter Kamera löst die zwei Teilprobleme der Korberkennung und Rechenkapazität mit einem Gerät. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist. Die Ausgabe des Startsignals und Endsignals mit einem Notebook und die Übermittlung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
+Die orange Variante bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der vordefinierten Ziele der Team-Charta. Den Ball von der Startposition aus gewinkelt durch die Luft zu werfen erfordert keine zusätzlichen Bauteile um das Produkt am Boden zu verschieben. Dies minimiert einerseits den Aufwand und verringert die Fehleranfälligkeit erheblich. Die Bälle in der Ausgangslage in einem Magazin zu führen, hat den Vorteil, dass eine allfällige stückweise Ausgabe der Bälle mit wenig Aufwand hinzugefügt werden kann. Ein Smartphone mit integrierter Kamera löst die zwei Teilprobleme der Korberkennung und Rechenkapazität mit einem Gerät. Des weiteren wäre das Produkt durch die Verwedung eines Akkus energieautark. Die Ausgabe des Startsignals und Endsignals mit einem Notebook und die Übermittlung mit Bluetooth sind einfach auszuführen, beruhen auf wohlbekannten, gut dokumentierten Technologien.
