--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -19,7 +19,7 @@ Es wurden vier Varianten (orange, grün, rot, blau), wie in Abbildung \ref{abb:G
 	Ausgangspunkt in dieser Variante ist die Auswahl, die Bälle in eine Kugel einzuschliessen. Da ein Smartphone mit integrierter Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Den Weg des Balles via seitliche Verschiebung wurde aufgrund der Unhandlichkeit der grossen Kugel gewählt: der Weg soll kurz und einfach gehalten werden. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast, um dem grossen Gewicht der Kugel entgegenzuwirken. Weiter ist die Ausgabe des Startsignals mit einem Notebook, sowie die Übertragung mit WLAN leicht zu Realisieren, da diese Lösungen auf gut dokumentierten Technologien basieren.
 	
 	\item Grüne Variante\\
-	Für die grüne Variante wurde als Ausgangslage der Bälle die Führung in einem Drehkranz gewählt. Kongruent zur Variante Rot, wurde auch hier der Weg des Balles via seitliche Verschiebung aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren. Da ein Smartphone mit integrierter Kamera verwendet wird, kann man zwei Teilprobleme mit einem Gerät lösen. Für die Wahl des Akkus und der Startsignal-Übertragung per WLAN überzeugten dieselben Kriterien, welche bereits in der roten Variante genannt wurden.
+	Für die grüne Variante wurde als Ausgangslage der Bälle die Führung in einem Drehkranz gewählt. Kongruent zur Variante Rot, wurde auch hier der Weg des Balles via seitliche Verschiebung aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren. Für die Wahl des Akkus, der Startsignal-Übertragung per WLAN und die Verwendung eines Smartphones überzeugten dieselben Kriterien, welche bereits in der roten Variante genannt wurden.
 	
 	\item Orange Variante\\
 	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist.
