Morphologie: Korrektur Feinkonzepte, Analyse

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -1,5 +1,5 @@
-\section{Analyse}
-	Als Gesamtübersicht und als Eruierungshilfe der einzelnen Teilprobleme haben wir zu Beginn der Lösungsfindung eine Skizze entworfen. Diese beinhaltet alle nötigen Elemente des Produkts und stellt diese in Relation zueinander dar. 
+﻿\section{Analyse}
+	Als Gesamtübersicht und als Eruierungshilfe der einzelnen Teilprobleme wurde zu Beginn der Lösungsfindung eine Skizze entworfen. Diese beinhaltet alle nötigen Elemente des Produkts und stellt diese in Relation zueinander dar. Produkt-Komponenten wurden dabei in blau, externe in grün dargestellt.
 	
 	\begin{figure}[h!]
 		\includegraphics[width=1.1\textwidth]{Morphologie/Bilder/Blockschaltbild}
