--- a/Dokumentation/Morphologie/Feinkonzept.tex
+++ b/Dokumentation/Morphologie/Feinkonzept.tex
@@ -1,4 +1,4 @@
-\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
+﻿\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
 \section{Feinkonzept}
 	Nach der Entscheidung für ein Grobkonzept folgt nun die Detaillierung dieses Konzeptes in ein Feinkonzept. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme auf gesplittet. Zu all diesen Subteilproblemen existieren wiederum Lösungsvarianten, die in Abbildung \ref{abb:Feinkonzept} dargestellt sind.
 	
@@ -33,10 +33,10 @@
 	Die Kommunikation des Smartphones zum Controller findet via USB-Kabel statt. Dies Aufgrund der Controller-Wahl, der nur die Kommunikation mit USB zulässt.\\
 	\\
 	\textbf{Objekterkennung (Kamera)}\\
-	Bei der Objekterkennung mittels Kamera sollen alle drei Auswertungsverfahren Kontrast, Helligkeit, Kontur verwendet werden. Falls die Ausführung mittels Kamera nicht klappen sollte, halten wir uns die Möglichkeit mit Ultraschall als Plan B offen.\\
+	Bei der Objekterkennung mittels Kamera sollen alle drei Auswertungsverfahren Kontrast, Helligkeit, Kontur verwendet werden. Falls die Erkennung mittels Kamera nicht klappen sollte, halten wir uns die Möglichkeit mit Ultraschall als Plan B offen.\\
 	\\
 	\textbf{Aktor für Standdrehung}\\
-	Die Drehung der Plattform erfolgt direkt mittels Schrittmotor, da diese Lösung kleine Veränderungen des Winkels zulässt und in gleichmässigen Schritten gesteuert werden kann.\\
+	Die Drehung der Plattform erfolgt direkt durch einen Schrittmotor, da diese Lösung kleine Veränderungen des Winkels zulässt und in gleichmässigen Schritten gesteuert werden kann.\\
 	\\
 	\textbf{Getriebemöglichkeiten}\\
 	Ob Getriebemöglichkeiten verwendet werden müssen, lässt der momentane Stand des Produkts keinen Schluss zu.\\
