Morphologie: Korrektur #2, alles gegengelesen

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -129,11 +129,11 @@
 			
 		\subsubsection{Weg des Balles}
 		\textit{Ist zusammen mit Anhang \ref{apx:WegDesBalles} zu betrachten.}\\		
-		\enquote{Aus Startposition zu Korb fliegen und abwerfen} nachfolgend als (1) bezeichnet.\\	
-		\enquote{Aus Startposition, gewinkelt durch Luft werfen} nachfolgend als (2) bezeichnet.\\
-		\enquote{Aus Startposition, seitlich bewegen, gerade aus durch Luft werfen} nachfolgend als (3) bezeichnet.\\
-		\enquote{Aus Startpositionmitte gerade zu Begrenzungslinie bewegen und gewinkelt durch Luft werfen} nachfolgend als (4) bezeichnet.\\
-		\enquote{Aus Startposition zu Begrenzungslinie gerade vor Korb bewegen und durch Luft werfen} nachfolgend als (5) bezeichnet.\\	
+		\enquote{Aus Startposition zu Korb fliegen und abwerfen}, nachfolgend mit (1) bezeichnet.\\	
+		\enquote{Aus Startposition, gewinkelt durch Luft werfen}, nachfolgend mit (2) bezeichnet.\\
+		\enquote{Aus Startposition, seitlich bewegen, gerade aus durch Luft werfen}, nachfolgend mit (3) bezeichnet.\\
+		\enquote{Aus Startpositionmitte gerade zu Begrenzungslinie bewegen und gewinkelt durch Luft werfen}, nachfolgend mit (4) bezeichnet.\\
+		\enquote{Aus Startposition zu Begrenzungslinie gerade vor Korb bewegen und durch Luft werfen}, nachfolgend mit (5) bezeichnet.\\	
 		
 		Nachfolgende Bezeichnungen (..) beziehen sich auf die Nummerierung im Anhang \ref{apx:BeurteilungTeilprobleme}			
 			\begin{itemize}
