--- a/Dokumentation/Morphologie/Feinkonzept.tex
+++ b/Dokumentation/Morphologie/Feinkonzept.tex
@@ -33,13 +33,13 @@
 	Die Kommunikation des Smartphones zum Controller findet via USB-Kabel statt. Dies Aufgrund der Controller-Wahl, der nur die Kommunikation mit USB zulässt.\\
 	\\
 	\textbf{Objekterkennung (Kamera)}\\
-	Bei der Objekterkennung mittels Kamera sollen alle drei Auswertungsverfahren Kontrast, Helligkeit, Kontur verwendet werden. Falls die Erkennung mittels Kamera nicht klappen sollte, halten wir uns die Möglichkeit mit Ultraschall als Plan B offen.\\
+	Bei der Objekterkennung mittels Kamera werden idealerweise alle drei optischen Bestimmungskriterien Kontrast, Helligkeit und Kontur zur Objektidentifikation verwendet. Falls die Erkennung mittels Kamera nicht realisierbar ist, stellt Ortung via Ultraschall eine interessante Alternative dar.\\
 	\\
 	\textbf{Aktor für Standdrehung}\\
 	Die Drehung der Plattform erfolgt direkt durch einen Schrittmotor, da diese Lösung kleine Veränderungen des Winkels zulässt und in gleichmässigen Schritten gesteuert werden kann.\\
 	\\
 	\textbf{Getriebemöglichkeiten}\\
-	Ob Getriebemöglichkeiten verwendet werden müssen, lässt der momentane Stand des Produkts keinen Schluss zu.\\
+	Ob Getriebemöglichkeiten zum Einsatz kommen, ist durch den momentanen Stand des Produkts nicht gegeben.\\
 	\\
 	\textbf{Wurfmechanismus}\\
 	Der Pneumatikzylinder erlaubt eine hohe Wurfreproduzierbarkeit. Mithilfe zweier Schwungräder kann durch einbringen eines Dralls die Flugbahn stabilisiert werden. Bei nur einem Schwungrad besteht der Vorteil, dass nur ein Motor verwendet werden muss. Ein Hubmagnet bietet eine gute Alternative zur Pneumatik-Ausführung, da keine externe Druckluft-Versorgung nötig ist. Der Hydraulikzylinder fällt aufgrund der niedrigen Geschwindigkeit weg. Die genaue Auswahl des Wurfmechanismus wird durch die Testbauten ermittelt.\\
