Morphologie: Letzte Korrekturen

--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -22,7 +22,7 @@ Es wurden vier Varianten (orange, grün, rot, blau), wie in Abbildung \ref{abb:G
 	Für die grüne Variante wurde als Ausgangslage der Bälle die Führung in einem Drehkranz gewählt. Kongruent zur Variante Rot, wurde auch hier der Weg des Balles via seitliche Verschiebung aufgrund der Unhandlichkeit des Drehkranzes als Favorit erkoren. Für die Wahl des Akkus, der Startsignal-Übertragung per WLAN und die Verwendung eines Smartphones überzeugten dieselben Kriterien, welche bereits in der roten Variante genannt wurden.
 	
 	\item Orange Variante\\
-	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System Energieautark ist.
+	Aus der Startposition gewinkelt werfen, ist der Ursprung der orangen Variante. Eine geführte Ausgabe aus einem Magazin hat den Vorteil, dass es mit leichten Materialen gebaut werden kann, verschiedene Formen, Winkel und Ausgabegeschwindigkeiten zur Verfügung stehen. Der Akku dient in dieser Variante neben der Energieversorgung auch als Ballast und hat den schönen Nebeneffekt, dass das System energieautark ist.
 \end{itemize}
 
 \subsection{Entscheidung}
