Korrekturen Nach MS 13.11.14

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -1,4 +1,4 @@
-﻿\section{Analyse}
+\section{Analyse}
 	Als Gesamtübersicht und als Eruierungshilfe der einzelnen Teilprobleme wurde zu Beginn der Lösungsfindung eine Skizze entworfen. Diese beinhaltet alle nötigen Elemente des Produkts und stellt diese in Relation zueinander dar. Produkt-Komponenten wurden dabei in blau, externe in grün dargestellt.
 	
 	\begin{figure}[h!]
@@ -21,14 +21,14 @@
 	Als nächster Schritt werden die Teilprobleme genauer definiert. Der Technologierecherche entspringende Lösungsansätze sollen die Problembereiche möglichst gut abdecken.
 	
 	\subsection{Beurteilung der Teilprobleme}
-		Durch die Definition von passenden Beurteilungskriterien sollen die verschiedenen Lösungsansätze für ein Teilproblem taxiert werden. An dieser Stelle bieten sich die definierten Ziele der Teamcharta an:
+		Durch die Definition von passenden Beurteilungskriterien sollen die verschiedenen Lösungsansätze für ein Teilproblem taxiert werden. An dieser Stelle bieten sich die definierten Ziele der Teamcharta !!Referenz!! an:
 		
 		\begin{enumerate}
 			\item Treffgenauigkeit
 			\item Geschwindigkeit
 			\item Gewicht
 		\end{enumerate}		
-		Da diese Ziele direkt durch die Eigenschaften des Werfers definiert werden, sollen sie auch direkt in die Auswahl der Komponenten miteinfliessen. Um das Kriterium Treffergenauigkeit auf alle Teilprobleme abbilden zu können, wurde dieses Ziel als Zuverlässigkeit neu definiert. Nachfolgend der Pool von Bewertungskriterien, aus welchem anschliessend für jedes Teilproblem ein geeignetes Set zur Bewertung ausgewählt wurde.
+		Da diese Ziele direkt durch die Eigenschaften des Werfers definiert werden sollen, sollten sie auch direkt in die Auswahl der Komponenten miteinfliessen. Um das Kriterium Treffergenauigkeit auf alle Teilprobleme abbilden zu können, wurde dieses Ziel als Zuverlässigkeit neu definiert. Nachfolgend der Pool von Bewertungskriterien, aus welchem anschliessend für jedes Teilproblem ein geeignetes Set zur Bewertung ausgewählt wurde.
 		
 		\begin{enumerate}
 			\item Zuverlässigkeit
@@ -37,7 +37,7 @@
 			\item Kosten
 			\item Aufwand
 		\end{enumerate}		
-		Der Faktor Zuverlässigkeit erhält in jedem Teilproblem einen hohen Wert. Der Aufwand belegt in der Regel einen kleinen Faktor, da er in einem Schulprojekt einen sekundären Stellenwert hat. Der Faktor der Kosten wurde bewusst im Mittelfeld angesiedelt, um den Fokus auf die Zielsetzung zu legen, aber trotzdem teuren Produkten ein Nachteil einzuhandeln.
+		Der Faktor Zuverlässigkeit erhält in jedem Teilproblem einen hohen Wert. Der Aufwand belegt in der Regel einen kleinen Faktor, da er in einem Schulprojekt einen sekundären Stellenwert hat. Der Faktor der Kosten wurde bewusst im Mittelfeld angesiedelt, um den Fokus klar auf die Zielsetzung zu legen.
 		In der Regel ist die Verteilung der Punkte pro Kriterium so geregelt, dass die am schlechtesten geeignete Lösung 1 Punkt erhält, die beste Lösung 5 Punkte und die restlichen einen Wert dazwischen.\\
 		\\
 		Um die nachfolgende Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:BeurteilungTeilprobleme} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
@@ -52,7 +52,7 @@
 				\item Kompatibilität\\
 				Ein Smartphone besitzt nur ein Betriebssystem mit beschränkter Funktionalität. Mit einem Notebook kann man viele verschiedene Software-Lösungen erstellen.
 				\item Aufwand\\
-				Das Smartphone/Notebook wird von einem Teammitglied zur Verfügung gestellt, es entsteht vor allem softwaretechnischer Aufwand. Für einen Taster müsste ein eigenes kleines System entwickelt werden.
+				Bei der Umsetztung mit einem Smartphone respektive Notebook entsteht vor allem softwaretechnischer Aufwand. Für einen Taster müsste ein eigenes kleines System entwickelt werden.
 			\end{itemize}
 			
 		\subsubsection{Startbefehlsübermittlung}
@@ -63,7 +63,7 @@
 				\item Kosten\\
 				Bluetooth (und WLAN) sind Teil der eingebauten Technologie in einem modernen Smartphone / Notebook. Für Infrarot und Akustischen Signalen müssten entsprechende Instrumente angeschafft werden.
 				\item Aufwand\\
-				Da jedes Teammitglied sowohl ein Smartphone, als auch einen Laptop mit WLAN/Bluetooth besitzt, wäre hier der Aufwand minimal. Das Auswerten eines Akustischen Signals ist hingegen aufwändig, fehleranfällig und benötigt zusätzliche Elektronik.
+				Die Beschaffung eines geeigneten Smartphones oder Notebook wäre kein Problem, der Aufwand diese zu programmieren hält sich in Grenzen. Das Auswerten eines Akustischen Signals ist hingegen aufwändig, fehleranfällig und benötigt zusätzliche Elektronik.
 			\end{itemize}	
 			
 		\subsubsection{Rechenkapazität}
@@ -86,9 +86,9 @@
 			\textit{Ist zusammen mit Anhang \ref{apx:Sensorik} zu betrachten.}
 			\begin{itemize}
 				\item Geschwindigkeit\\
-				Eine Foto mit einer Smartphone Kamera ist schnell geschossen und kann direkt im Smartphone bearbeitet werden. Ein Laser muss viele Punkte abscannen und dabei mechanisch geschwenkt werden.
+				Ein Foto mit einer Smartphone Kamera ist schnell erstellt und kann direkt im Smartphone bearbeitet werden. Ein Laser muss viele Punkte abscannen und dabei mechanisch geschwenkt werden.
 				\item Genauigkeit\\
-				Ein Laser misst viele Punkte, kann daher ein sehr detailliertes Abbild schaffen. Ultraschallmessungen hingegen eher unpräzise.  
+				Ein Laser misst viele Punkte, kann daher ein sehr detailliertes Abbild schaffen. Ultraschallmessungen sind hingegen eher unpräzise.  
 				\item Zuverlässigkeit\\
 				Laservermessungen sind dank des detaillierten Abbilds zuverlässig in der Korberkennung. Infrarot ist aufgrund des vielen Fremdeinflusses (bsp. Lichtstrahler an Spielfeldrand) unzuverlässig.
 				\item Kosten\\
@@ -103,7 +103,7 @@
 				\item Zuverlässigkeit\\
 				Ein Akku hat im Vergleich zu einem Netzteil höhere Spannungsschwankungen.
 				\item Gewicht\\
-				(hier als Vorteil, da als Ballast anrechenbar) Akku kann zur Gewichtsbestimmung entfernt werden.
+				(hier ein Vorteil, da als Ballast anrechenbar) Akku kann zur Gewichtsbestimmung entfernt werden.
 				\item Kosten\\
 				Netzteile sind günstig und alte Netzteile können für diese Aufgabe recycelt werden. Akkus müssten neu gekauft werden.
 				\item Aufwand\\
@@ -134,8 +134,7 @@
 		\enquote{Aus Startposition, seitlich bewegen, gerade aus durch Luft werfen}, nachfolgend mit (3) bezeichnet.\\
 		\enquote{Aus Startpositionmitte gerade zu Begrenzungslinie bewegen und gewinkelt durch Luft werfen}, nachfolgend mit (4) bezeichnet.\\
 		\enquote{Aus Startposition zu Begrenzungslinie gerade vor Korb bewegen und durch Luft werfen}, nachfolgend mit (5) bezeichnet.\\	
-		
-		Nachfolgende Bezeichnungen (..) beziehen sich auf die Nummerierung im Anhang \ref{apx:BeurteilungTeilprobleme}			
+				
 			\begin{itemize}
 				\item Geschwindigkeit\\
 				Je weniger Achsen bewegt werden müssen, desto schneller ist die jeweilige Lösung. (2) muss nur eine Drehbewegung ausführen. (5) muss drei Bewegungen ausführen.
