--- a/Dokumentation/Morphologie/Feinkonzept.tex
+++ b/Dokumentation/Morphologie/Feinkonzept.tex
@@ -1,4 +1,4 @@
-﻿\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
+\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
 \section{Feinkonzept}
 	Nach der Entscheidung für ein Grobkonzept folgt nun die Detaillierung dieses Konzeptes in ein Feinkonzept. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme auf gesplittet. Zu all diesen Subteilproblemen existieren wiederum Lösungsvarianten, die in Abbildung \ref{abb:Feinkonzept} dargestellt sind.
 	
@@ -30,7 +30,7 @@
 	Die Art des Hauptversorgungsakkumulators wird erst mit der Konstruktion und Dimension des Produkts klar, bleibt im daher im Moment noch offen.\\
 	\\
 	\textbf{Kommunikation zwischen Smartphone und Controller}\\
-	Die Kommunikation des Smartphones zum Controller findet via USB-Kabel statt. Dies Aufgrund der Controller-Wahl, der nur die Kommunikation mit USB zulässt.\\
+	Die Kommunikation des Smartphones zum Controller findet via USB-Kabel statt. Dies Aufgrund der Controller-Wahl, der unter anderem die Kommunikation mit USB zulässt.\\
 	\\
 	\textbf{Objekterkennung (Kamera)}\\
 	Bei der Objekterkennung mittels Kamera werden idealerweise alle drei optischen Bestimmungskriterien Kontrast, Helligkeit und Kontur zur Objektidentifikation verwendet. Falls die Erkennung mittels Kamera nicht realisierbar ist, stellt Ortung via Ultraschall eine interessante Alternative dar.\\
