--- a/Dokumentation/Morphologie/Grobkonzept.tex
+++ b/Dokumentation/Morphologie/Grobkonzept.tex
@@ -1,4 +1,4 @@
-﻿\begin{landscape}
+\begin{landscape}
 	\section{Grobkonzept}
 		\begin{figure}[h!]
 			\includegraphics[page=1,scale=0.75,clip,trim=17mm 37mm 21mm 19mm]{Morphologie/Bilder/Grobkonzept.pdf}
@@ -26,4 +26,4 @@ Es wurden vier Varianten (orange, grün, rot, blau), wie in Abbildung \ref{abb:G
 \end{itemize}
 
 \subsection{Entscheidung}
-Die orange Variante bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der vordefinierten Ziele der Team-Charta. Den Ball von der Startposition aus gewinkelt durch die Luft zu werfen erfordert keine zusätzlichen Bauteile um das Produkt am Boden zu verschieben. Dies minimiert einerseits den Aufwand und verringert die Fehleranfälligkeit erheblich. Die Bälle in der Ausgangslage in einem Magazin zu führen hat den Vorteil, dass eine allfällige stückweise Ausgabe der Bälle mit wenig Aufwand hinzugefügt werden kann. Ein Smartphone mit integrierter Kamera löst die zwei Teilprobleme der Korberkennung und Rechenkapazität mit einem Gerät. Des weiteren wäre das Produkt durch die Verwedung eines Akkus energieautark. Die Ausgabe des Startsignals und Endsignals mit einem Notebook und die Übermittlung mit Bluetooth sind einfach auszuführen und beruhen auf wohlbekannten, gut dokumentierten Technologien.
+Die orange Variante bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der vordefinierten Ziele der Team-Charta !! Referenz !!. Den Ball von der Startposition aus gewinkelt durch die Luft zu werfen erfordert keine zusätzlichen Bauteile um das Produkt am Boden zu verschieben. Dies minimiert einerseits den Aufwand und verringert die Fehleranfälligkeit erheblich. Die Bälle in der Ausgangslage in einem Magazin zu führen hat den Vorteil, dass eine allfällige stückweise Ausgabe der Bälle mit wenig Aufwand hinzugefügt werden kann. Ein Smartphone mit integrierter Kamera löst die zwei Teilprobleme der Korberkennung und Rechenkapazität mit einem Gerät. Des weiteren wäre das Produkt durch die Verwedung eines Akkus energieautark. Die Ausgabe des Startsignals und Endsignals mit einem Notebook und die Übermittlung mit Bluetooth sind einfach auszuführen und beruhen auf wohlbekannten, gut dokumentierten Technologien.
