--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -5,7 +5,7 @@
         Yves Studer\\
         Thomas Wiss\\
         Livio Kunz\\
-        Nikolaus Manser\\
+        Niklaus Manser\\
         Matteo Trachsel\\
         Güdel Manuel\\
         Pascal Roth\\
