--- a/Dokumentation/Recherche/Kommunikation.tex
+++ b/Dokumentation/Recherche/Kommunikation.tex
@@ -1,5 +1,5 @@
 ﻿\section{Kommunikation}
-In diesem Abschnitt werden zwei Problembereiche angeschnitten. Zum einen kann ein PC oder ein Prozessor keine Peripherie (Motoren, Wurfmechanismus etc.) ansteuern, weshalb Hardware benötigt wird, welche die Ansteuerung übernimmt. Zwischen der Rechnerhardware und der Ansteuerhardware bedarf es einer Kommunikationsschnittstelle. Dafür wurde recherchiert, welches Bussystem man dafür einsetzen könnte und was die jeweiligen Vor- und Nachteile sind. Des weiteren muss für die kabellose Übermittlung des Startsignals eine geeignete Lösung gefunden werden.
+In diesem Abschnitt werden zwei Problembereiche behandelt. Da ein PC oder ein Prozessor keine Peripherie (Motoren, Wurfmechanismus etc.) ansteuern kann, wird eine bestimmte Hardware benötigt. Zwischen der Rechnerhardware und der Ansteuerhardware bedarf es einer Kommunikationsschnittstelle. Dafür bieten sich folgende Bussysteme an, mit den jeweiligen Vor- und Nachteile. Des weiteren muss für die kabellose Übermittlung des Startsignals eine geeignete Lösung gefunden werden.
 
 \subsection{USB}
 Der Universal Serial Bus ist eine gängige kabelgebundene serielle Schnittstelle, mit der Daten von einem Host an ein oder mehrere Slaves\footnote{Peripherie-Geräte} übertragen werden können. Die Übertragung findet differentiell statt, was eine gute Störunempfindlichkeit mit sich bringt. Es können Datenraten von 1.5 $\frac{Mbit}{s}$ bis zu 10 $\frac{Gbit}{s}$ realisiert werden. Der Aufbau des Systems bedingt, dass ein Master-Controller eingesetzt wird. Dies ist bei PC's standardmässig vorhanden, was bei anderen Geräten problematisch sein kann. So gibt es zum Beispiel Mobile-Phones, die nur über eine Slave-Hardware verfügen. Weiter bietet der USB-Standard diverse mechanische Formen und Grössen eines Steckers.
