--- a/Dokumentation/Recherche/Versorgung.tex
+++ b/Dokumentation/Recherche/Versorgung.tex
@@ -1,7 +1,7 @@
-\section{Versorgung}
+﻿\section{Versorgung}
 Eine Möglichkeit um das Produkt mit Energie zu versorgen, ist ein Akkumulator. Es gibt verschiedene Typen: Blei-Akku, Li-Ionen-Akku, Nickel-Cadmium-Akku (NiCd), Nickel-Metallhydird-Akku (NiMh). Jeder Typ hat verschiedene Vor- und Nachteile, die in der Tabelle \ref{tab:UebersichtVorNachTeil} ersichtlich sind.\\
 \\
-Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, könnte jedoch eben durch sein Gewicht für zusätzliche Stabilität sorgen, womit er sich als Lösung anbietet. Wichtig für die anschliessende Auswahl eines Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. An dieser Stelle werden lediglich die Eckdaten ausgewiesen, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
+Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, kann jedoch durch sein Gewicht für zusätzliche Stabilität sorgen. Wichtig für die anschliessende Auswahl eines Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. An dieser Stelle werden lediglich die Eckdaten ausgewiesen, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
 
 
 \begin{table}[h!]
