--- a/Dokumentation/Recherche/Flugobjekte.tex
+++ b/Dokumentation/Recherche/Flugobjekte.tex
@@ -1,5 +1,5 @@
-\section{Flugobjekte}
-Durch die gestellten Anforderungen bietet es sich auch an, die Problemstellung mit einem Flugobjekt zu lösen. Auch hier gibt es diverse Möglichkeiten. Dazu zählt ein Quadcopter, ein Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
+﻿\section{Flugobjekte}
+Durch die gestellten Anforderungen bietet es sich an, die Problemstellung mit einem Flugobjekt zu lösen. Es bestehen diverse Möglichkeiten, das Problem zu lösen. Dazu zählt ein Quadcopter, ein Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
 
 \subsection{Quadrocopter}
 Ein Quadcopter kann nach einer schon vorhandenen Bauanleitung zusammengebaut werden. Die Flugsteuerung erfolgt über mehrere Beschleunigungssensoren, wodurch die Flugbahn sehr stabil gehalten werden kann. Die Traglast eines Quadcopters kann durch Verwendunge eines stärkeren Motors erhöht werden, wodurch es kein Problem ist, auch schwerere Gegenstände zu transportieren. Die Steuerung des Quadcopter ist schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, benötigt man diverse Kameras, welche den Flugraum überwachen. Um eine genaue Fluggbahn zu erreichen, braucht es eine aufwendige Softwarelösung. Der Quadcopter und die Steuerung sind sehr kostenintensiv.
