--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,5 +1,5 @@
-\section{Object-Tracking – Objekt Verfolgung}
-Die Erkennung des Korbs, sowie die Bestimmung der Distanz zum Ziel müssen durch einen geeigneten Mechanismus gelöst werden. Genauigkeit und Geschwindigkeit spielen dabei eine gewichtige Rolle wie auch der benötigte Aufwand und Kosten für die Umsetzung.
+﻿\section{Object-Tracking – Objekt Verfolgung}
+Die Erkennung des Korbs, sowie die Bestimmung der Distanz zum Ziel müssen durch einen geeigneten Mechanismus gelöst werden. Genauigkeit und Geschwindigkeit spielen dabei eine gewichtige Rolle, wie auch der Aufwand und die Kosten für die Umsetzung.
 
 \subsection{Google Obj-Tracking with OpenCV}
 Zur Objekterkennung wäre eine App für ein Smartphone denkbar, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Anleitungen und Source Code sind vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
