Enddokumentation tests hinzugefügt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -39,7 +39,8 @@
 		    %  Schnittstellenbeschreibungen 
 		    %  Softwaresubsysteme 
 		    %  Wichtige Berechnungen (Resultate) 
-		    %  Beschreibung von Versuchen und Tests mit Ergebnissen 
+		    %  Beschreibung von Versuchen und Tests mit Ergebnissen
+		    \input{Funktionstests/Ballmaschine}
     
 	  %Projektmanagement und Projektplanung 
 	    
