Tests in Doku erweitert und angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -40,7 +40,11 @@
 		    %  Softwaresubsysteme 
 		    %  Wichtige Berechnungen (Resultate) 
 		    %  Beschreibung von Versuchen und Tests mit Ergebnissen
-		    \input{Funktionstests/Ballmaschine}
+		    \input{Funktionstests/Ballmaschine} 
+		    \newpage
+		    \input{Funktionstests/BallmaschineDrehzahl}
+		    \newpage
+		    \input{Funktionstests/Pneumatikzylinder}
     
 	  %Projektmanagement und Projektplanung 
 	    
@@ -91,7 +95,14 @@
 	            
 	            %  Detaillierte Berechnungen 
 	            
-	            %  Versuche und Tests: Details, Messprotokolle etc. 
+	            %  Versuche und Tests: Details, Messprotokolle etc.
+	            \includegraphics[page=1,width=\textwidth]{Funktionstests/Ballmaschine.pdf}
+	            \newpage
+	            \includegraphics[page=1,width=\textwidth]{Funktionstests/BallmaschineDrehzahl.pdf}
+	            \newpage
+	            \includegraphics[page=1,width=\textwidth]{Funktionstests/Pneumatikzylinder.pdf}
+	            \newpage
+	            
 	            
 	            %  Meilensteinberichte, Protokolle, Pendenzenlisten
 	            \includegraphics[page=1,width=\textwidth]{Enddokumentation/Anhang/Extern/Besprechung_MS1.pdf}
