--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -1,25 +1,18 @@
 \section{Testberichte}
 \subsection{Ballmaschine}
-%\begin{figure}[h!]
-	%\includegraphics[scale=0.75]{Funktionstests/Bilder/Ballmaschine_Drehzahl1.jpg}
-	%\centering
-	%\caption{Ballmaschine_Drehzahl1} 
-%\label{abb:Ballmaschine_Drehzahl1}
-%\end{figure}	
-Typ: Ballmaschine\\ 
-Datum: 18.10.2014   \\
-Ort: Labor \\
-Tester: Gruppe 32 \\
-Ziel des Testes:  Das Ziel dieses Testes bestand darin, den gebauten Prototyp (Ballmaschine) 
+
+\textit{Typ}: Ballmaschine \\ 
+\textit{Datum}: 18.10.2014   \\
+\textit{Ort}: Labor HSLU \\
+\textit{Tester}: Gruppe 32 \\
+\textit{Ziel des Testes}:  Das Ziel dieses Testes bestand darin, den gebauten Prototyp (Ballmaschine) 
 auf die Genauigkeit und Wurfweite zu testen. Erkenntnisse über die 
 Drehzahl der Räder zu eruieren. Die erforderliche Stromstärke unter realen 
 Bedingungen testen.  \\
-Fazit/ 
-Verbesserungsvorschlag: \\
-Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue 
-„Schüsse“ erzielen.  \\
-Zu verbessern: 
--Stabilere Achsen  \\
--genauere und gleichmässige Zuführung der Bälle. \\
--einstellbares Grundgerüst \\
-Ziel erreicht: Ja
+\textit{Fazit / Verbesserungsvorschlag}: \\
+Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen.  \\
+Zu verbessern: \\
+- Stabilere Achsen  \\
+- genauere und gleichmässige Zuführung der Bälle. \\
+- einstellbares Grundgerüst \\
+\textit{Ziel erreicht}: Ja
