--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -1,18 +1,16 @@
 \section{Testberichte}
 \subsection{Ballmaschine}
-
-\textit{Typ}: Ballmaschine \\ 
-\textit{Datum}: 18.10.2014   \\
-\textit{Ort}: Labor HSLU \\
-\textit{Tester}: Gruppe 32 \\
-\textit{Ziel des Testes}:  Das Ziel dieses Testes bestand darin, den gebauten Prototyp (Ballmaschine) 
-auf die Genauigkeit und Wurfweite zu testen. Erkenntnisse über die 
-Drehzahl der Räder zu eruieren. Die erforderliche Stromstärke unter realen 
-Bedingungen testen.  \\
-\textit{Fazit / Verbesserungsvorschlag}: \\
-Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen.  \\
-Zu verbessern: \\
-- Stabilere Achsen  \\
-- genauere und gleichmässige Zuführung der Bälle. \\
-- einstellbares Grundgerüst \\
-\textit{Ziel erreicht}: Ja
+\begin{tabular}{p{3.6cm}p{9.4cm}}
+\textit{Typ}              & Ballmaschine \\ 
+\textit{Datum}:           & 18.10.2014   \\
+\textit{Ort}:             & Labor HSLU \\
+\textit{Tester}:          & Gruppe 32 \\
+\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp (Ballmaschine) auf die Genauigkeit und Wurfweite zu testen. Erkenntnisse über die Drehzahl der Räder zu eruieren. Die erforderliche Stromstärke unter realen Bedingungen testen.  \\
+\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen. Zu verbessern sind:
+\begin{itemize}
+    \item Stabilere Achsen
+    \item genauere und gleichmässige Zuführung der Bälle.
+    \item einstellbares Grundgerüst
+\end{itemize}\\
+\textit{Ziel erreicht}:& Ja\\
+\end{tabular}
