Versuchsbeschreibung der Brushless-Ansteuerung erstellt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -45,6 +45,9 @@
 		    \input{Funktionstests/BallmaschineDrehzahl}
 		    \newpage
 		    \input{Funktionstests/Pneumatikzylinder}
+		    \newpage
+		    \input{Funktionstests/BrushlessMotorAnsteuerung}
+		    \newpage
     
 	  %Projektmanagement und Projektplanung 
 	    
