--- a/Dokumentation/Funktionstests/BrushlessMotorAnsteuerung.tex
+++ b/Dokumentation/Funktionstests/BrushlessMotorAnsteuerung.tex
@@ -20,12 +20,36 @@
 \end{wrapfigure}
 Das Schema des gesamten Aufbaus des Tests ist in der Abbildung \ref{abb:MotoransteuerungSchema} abgebildet. Die 3-Phasen H-Brücke oben im grünen Rechteck wird direkt vom FPGA angesteuert. Die Hardware dieser Brücke ermöglicht eine voll galvanisch getrennte Ansteuerung mit 3.3V Logikpegeln. Diese Brücke wurde zur Verfügung gestellt und verwendet. Die Rekonstruktion der Hallsensoren-Signale findet im rot markierten Teil des Aufbaus statt. Dieser Part wurde auf einer Laborplatte aufgebaut und zusammen gelötet. Die so generierten Signale $U_{Hallsensor}$, $V_{Hallsensor}$, $W_{Hallsensor}$ werden einem FPGA geliefert. Anhand dieser Signale steuert dieses das FPGA die H-Brücken-Transistoren mittels der Signale $U_h$, $U_l$, $V_h$, $V_l$, $W_h$, $W_l$. Die im FPGA enthaltene Konfiguration sind simple AND-Verknüpfungen, die die anligenden Signale sehr schnell und effizient verarbeiten. Auf diese Weise ist es möglich, den Motor sehr schnell anzusteuern.\\
 \\
-In der Abbildung \ref{abb:MessplatzAufbau} ist der gesamte Aufbau abgebildet. Man beachte die markierten Felder. am unteren linken Rand ist der Motor befestigt. In der Mitte des Bildes ist die Hardware, mit der die Hallsensoren Signale rekonstruiert werden. Die generierten Signale werden dem FPGA in der unteren linken Ecke zugeführt. Diese Signale werden logisch verknüpft und danach werden die sechs Signale generiert um die H-Brücke in der oberen rechten Hälfte anzusteuern. Diese Wiederum treiben den Motor an.\\
+In der Abbildung \ref{abb:MessplatzAufbau} ist der gesamte Aufbau abgebildet. Man beachte die markierten Felder. am unteren linken Rand ist der Motor befestigt. In der Mitte des Bildes ist die Hardware, mit der die Hallsensoren Signale rekonstruiert werden. Die generierten Signale werden dem FPGA in der unteren linken Ecke zugeführt. Diese Signale werden logisch verknüpft und danach werden die sechs Signale generiert um die H-Brücke in der oberen rechten Hälfte anzusteuern. Diese Wiederum treiben den Motor an.
 \begin{figure}[h!]
 %\vspace{-16pt}
 	\includegraphics[scale=0.14]{Funktionstests/Bilder/MessplatzAufbau.jpg}
 	\centering
-	\caption{Schema des gebauten Boards} 
+	\caption{Testaufbau} 
 \label{abb:MessplatzAufbau}
 %\vspace{-10pt}
-\end{figure}
+\end{figure}\\
+Die im FPGA enthaltene Logik basiert auf der Wahrheitstabelle, die in Abbildung \ref{abb:WahrheitstabelleAnsteuerung} abgebildet ist.
+\begin{figure}[h!]
+\begin{tabular}{ccc||cc|cc|cc||c}
+     $H_1$ & $H_2$ & $H_3$ & $U_h$ & $U_l$ & $V_h$ & $V_l$ & $W_h$ & $W_l$ & Illegal\\
+\hline 0   &   0   &   0   &   0   &   0   &   0   &   0   &   0   &   0   &   1\\
+       0   &   0   &   1   &   0   &   0   &   0   &   1   &   1   &   0   &   0\\
+       0   &   1   &   0   &   0   &   1   &   1   &   0   &   0   &   0   &   0\\
+       0   &   1   &   1   &   0   &   1   &   0   &   0   &   1   &   0   &   0\\
+       1   &   0   &   0   &   1   &   1   &   0   &   0   &   1   &   0   &   0\\
+       1   &   0   &   1   &   1   &   0   &   0   &   1   &   0   &   0   &   0\\
+       1   &   1   &   0   &   0   &   0   &   1   &   0   &   0   &   1   &   0\\
+       1   &   1   &   1   &   0   &   0   &   0   &   0   &   0   &   0   &   1\\
+\end{tabular}
+	\centering
+	\caption{Wahrheitstabelle der Ansteuerung} 
+\label{abb:WahrheitstabelleAnsteuerung}
+\end{figure}\\
+Die Tabelle kann pro Signal zu folgenden logischen Verknüpfung vereinfacht werden.\\
+\begin{tabular}{ccc}
+$U_h = H_1 \wedge \bar{H_2}$ & $V_h = H_2 \wedge \bar{H_3}$ & $W_h = \bar{H_1} \wedge H_3$\\
+$U_l = \bar{H_1} \wedge H_2$ & $V_l = \bar{H_2} \wedge H_3$ & $W_l = H_1 \wedge \bar{H_3}$
+\end{tabular}
+
+ 
